Update ai-logic/firebase-ai/src/testUtil/java/com/google/firebase/ai/JavaCompileTests.java
Co-authored-by: gemini-code-assist[bot] <176961590+gemini-code-assist[bot]@users.noreply.github.com>